tests/snapshots/corpus__sexpr@007.kdl.snap
---
source: tests/corpus.rs
expression: "string \"my\nmultiline\nvalue\"\n"
---
(document
  (node
    (name string)
    (trivia " ")
    (argument
      (value "my
multiline
value"))
    (trivia "\n")))
