tests/snapshots/corpus__sexpr@009.kdl.snap
---
source: tests/corpus.rs
expression: "num 1.234e-25\n"
---
(document
  (node
    (name num)
    (trivia " ")
    (argument
      (value 1.234e-25))
    (trivia "\n")))
