tests/snapshots/corpus__sexpr@017.kdl.snap
---
source: tests/corpus.rs
expression: "node{}\n"
---
(document
  (node
    (name node)
    (trivia "{")
    (children)
    (trivia "}"))
  (trivia "\n"))
