tests/snapshots/corpus__sexpr@018.kdl.snap
---
source: tests/corpus.rs
expression: "1\n"
---
(document
  (node
    (error "values are not allowed without a containing node")
    (trivia "1"))
  (trivia "\n"))
