tests/snapshots/corpus__sexpr@019.kdl.snap
---
source: tests/corpus.rs
expression: "node/-\"val\"\"val\"\n"
---
(document
  (node
    (name node)
    (trivia "/-" "\"val\"")
    (argument
      (value "val"))
    (trivia "\n")))
