tests/snapshots/corpus__sexpr@021.kdl.snap
---
source: tests/corpus.rs
expression: "node /- /- {} {} \"val\"\n"
---
(document
  (node
    (name node)
    (trivia " " "/-" " " "/-" " " "{" "}" " " "{" "}" " ")
    (argument
      (value "val"))
    (trivia "\n")))
